@@ -1,6 +1,6 @@
 AUX jack_oscrolloscope-0.7-Makefile.patch 1067 SHA256 e89af94d8ac258b394917c1b801ea9ff99127422e19700b1b98df9c542c9e3d8 SHA512 5625f60d434fc39c6a4052946aed5a4c8c93a5c0d8619f437532b7f1bcc48d8c9a9fe4f71c5d7e40c841284e877e997815890937d98b2bc5c4d7b08ad157c330 WHIRLPOOL 17721516e3bfc61dda60310d177f4ca9861a8ecaeb27b9710a806f582641245e500a7423bcd54f218e73255c5937628d348f8fba0181a9a9ee5ee32977339a09
 AUX jack_oscrolloscope-0.7-linking.patch 404 SHA256 f43b9078036c6c501bcdce91686f945beb815216a237b3c3993a1baf71da1dea SHA512 d187d50db8a48ff981f91173aade710951da2dbb91b45e43ec9c5ae51838f6342e09ddf24c199958d4bc1f48b43682a25a2631e19690c01925e05a039c471d00 WHIRLPOOL 6a6bfe9dad3948ae90ed1fca2fa9bbf03bfa3feca8d66ec0d31fcba9eda4b4cd174e08134df8ca1f65044e02d97c4a96aba3e21486dcad8485fae11109bb326c
 DIST jack_oscrolloscope-0.7.tar.gz 17719 SHA256 50abd8bde53f0dda5ca812ca0537bd1785766a0c69076b402ef0480d6c2c85de SHA512 08054af18b8010cf554824657c94d55f593e60117fa7b236fe6050191cd50a68d609426747d4b54db85fff8d3eda557ac32d4821ecf579e5c812db2761fc6795 WHIRLPOOL d69ca82a4baa887bc2100148c9e78ebb497e9ac59573c5e329fbe143837675cd6e38cb8607d9a8405ccb4e5fbbcb5c43d0fda78cb0e7297a3c18037b3ffef765
-EBUILD jack_oscrolloscope-0.7.ebuild 828 SHA256 1ce07beca4a68eb50959e4c844196675d880b6b5d3c7489f902600648b801776 SHA512 cd6855d32de1538b158e4955831b2a4a24317d9e7c02424f7fe3a4f3bb44adf7cb7ee24df3edf10aa74e24ec4716e43417b028c498763494cb0fb4adadd9069e WHIRLPOOL e4ff41c536a4d613c018081aba37887dc5681c1fe858c0b396a4a47f31f3cd995874a3f5da454f87bf0a952c48028b929147d57ff19c7e3ee5735c59962b42e6
-MISC ChangeLog 1279 SHA256 2d3ede94b2fc883813d40b4b5da8e5ffc3b53329b61c1a636f10be37247777ac SHA512 759fbb0a8d0b8840e78b80c0e30f5a7eb723df45eb1b835eb6761a879286bcb9214242d66e615c4cee9a8bfb0696d7ea337da3c731d74de4237dee0548d15a09 WHIRLPOOL 9a78a9facad03136d1474cf710a7b524bc255dc2827c70b388ac527f73b318a6b3eee53240322c489b5edc9a8e2264f8d7fe760645d98a09b76aa897b4d65b5e
+EBUILD jack_oscrolloscope-0.7.ebuild 869 SHA256 929b67530b4658d8a6035b0312a6edf6a9d5b2c4414715734364aabf235fdceb SHA512 fb046e08b77d33f8949ad75f30d60fcf822b3301024e56ebd2b880d961c7bd40f2e606e4c023076a3f0f08570a19d9c290e22878d60243c5801bb4acb64576dc WHIRLPOOL e26794f3139af18c87664eefc63b975bef526f4179894b49170f5fa425f633740f834005e6b9c6f12ac4fd42f0b610f1021a8f99b5500e82d422a659814ff309
+MISC ChangeLog 1463 SHA256 4eb642af546fd6e3a745bb102a3ec8e398575964e7637daa2e0e74ab47244312 SHA512 6f0a06d1c980db44490423225891074d73f8a181414c4898e25d613eac5fb1caa0daeda38a8f2e217a29bfab590c90873a0052056afcd00dd41afa251c8ed62f WHIRLPOOL 05c573cfd1427951f6511103b2876026a49c2e3169443ece09da461bbe013d585ae216337ea330af4aaa2464bbe4943b8665bc77c1a63b78632ba10cc20b2861
 MISC metadata.xml 246 SHA256 f32f31abe9dcc1f9a5dc9b6a36996d773abd006d92c13c4df48f8d7d1061060f SHA512 327022589c637a14219eb603a62050fbb93b980f4693960c0ac4117b6b483d9f0d9fe1366d8e18227b34373a399aef339f49c16df8ca57b9ec870568a4d394f4 WHIRLPOOL e55381a9a9fd1d0efbe87da1c3aa302efdcf4734827f56273faeb55b17361c529518fcf16ac0946102e26165e8eedba81ab0cd07c7b08ce6bad001e944e43a0f
